# Docker4ModernML

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.BasicPyDS  Makefile  README.rst  alpine_pyenv_pdm.dockerfile  index.md  notes.rst  notes.txt  readme.html
.pdm/: config.toml
.pdm/global-project/: .pdm.toml  pyproject.toml
jupyter/: start-notebook.sh  start.sh
