[project]
dependencies = [
    "pip",
    "setuptools",
    "wheel",
    "ipython>=8.3.0",
    "pre-commit>=2.19.0",
    "nox>=2022.1.7",
    "sphinx>=4.5.0",
    "flake8>=4.0.1",
    "mypy>=0.950",
    "black>=22.3.0",
    "typer>=0.4.1",
    "pytest>=7.1.2",
    "coverage>=6.4",
    "furo>=2022.4.7",
    "sphinx-click>=4.0.3",
]

[tool]
[tool.pdm]
